Switch history storage to primitive collections with HPPC (#126, #142)
Replace ArrayList<Double> in Variable and Flow with HPPC
DoubleArrayList, eliminating boxing overhead (~3x memory reduction
per recorded value). Replace List<List<Double>> snapshots in RunResult
with List<double[]> and IntArrayList for step indices. Update all
consumers of getStockValuesAtStep/getVariableValuesAtStep to use
array indexing.